--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
     width: 100%;
     justify-content: space-between;
     font-size: 30px;
-    background-color: black;
+    background-color: rgb(175, 171, 171);
     height: 150px;
 }
 
@@ -18,4 +18,13 @@ button{
 .logo{
     margin-left: 10px;
     font-weight: bold;
+}
+
+img {
+    height: 30px;
+}
+
+.cartWidget {
+    font-size: medium;
+    padding: 10px;
 }
