--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,4 +1,6 @@
-
+.containerCard{
+    display: flex;
+}
 .containerCard_Item {
     display: flex;
     flex-flow: column nowrap;
@@ -7,7 +9,7 @@
     width: 300px;
     background-color: #191c20;
     padding: .5rem 1rem;
-    margin: 1rem 0;
+    margin: 1rem 1rem;
 }
 
 .productName {
@@ -27,7 +29,7 @@
 
 .productImg {
     width: 100%;
-    height: 10%;
+    height: auto;
     padding: .5rem;
     object-fit: cover;
 }
