--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,11 +9,18 @@
     align-items: center;
 }
 
-button{
-    font-size: 20px;
+a{
+    font-size: 26px;
     border-radius: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 30px;
+    margin-right: 30px;
+    text-decoration: none;
+    font-weight: bold;
+    color: rgb(28, 25, 35);
+}
+
+a:hover {
+    color: whitesmoke;
 }
 
 .logo{
@@ -21,6 +28,9 @@ button{
     font-weight: bold;
 }
 
+.logo:hover {
+    color:  rgb(28, 25, 35);
+}
 img {
     height: 30px;
 }
