--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -48,5 +48,16 @@
 
 .button-agregar{
     color: white;
-    background-color: red;
+    background-color: rgba(232, 12, 12, 0.775);
+    height: 30px;
+    transition: all 0.5s;
+    border-color: rgb(232, 12, 0.775);
+    font-size: medium;
+    border-radius: 2px;
+    cursor: pointer;
+} 
+
+.button-agregar:hover{
+    color: #fffafa;
+    background-color: rgb(255, 1, 1);
 }
