--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  /* min-height: 100vh; */
+  /* min-height: 100vh; */ 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,19 +35,23 @@
   to {
     transform: rotate(360deg);
   }
-}
+} 
 
 .loader {
-  display: inline-block;
+  display: flex;
   font-size: 48px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   color: #FFF;
   position: relative;
+  justify-content: center;
+  margin-top: 200px;
+  height: 100vh;
 }
+
 .loader::before {
   content: '';  
-  position: absolute;
+  /* position: absolute; */
   left: 34px;
   bottom: 8px;
   width: 30px;
