--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -7,9 +7,15 @@
     align-items: center;
     justify-content: center;
     width: 300px;
-    background-color: #191c20;
+    /* background-color: #191c20; */
     padding: .5rem 1rem;
     margin: 1rem 1rem;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    border-radius: 5px;
 }
 
 .productName {
@@ -48,7 +54,7 @@
 
 .productDetail {
     color: rgba(255, 0, 0, 0.797);
-    background-color: #282c34;
+    background-color: #1c1e24;
     padding: 10px;
     font-size: 16px;
 }
