--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -51,9 +51,9 @@
     background-color: rgba(232, 12, 12, 0.775);
     height: 30px;
     transition: all 0.5s;
-    border-color: rgb(232, 12, 0.775);
     font-size: medium;
-    border-radius: 2px;
+    border-radius: 5px;
+    border: none;
     cursor: pointer;
 } 
 
