--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -8,6 +8,8 @@
     border:1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     margin: 1rem 1rem;
+    border-radius: 5px;
+    padding-right: 15px;
 } 
 
 .img_detail {
@@ -18,6 +20,7 @@
     object-fit: cover;
     margin-bottom: 10px;
     height: auto;
+    border-radius: 15px;
 }
 
 .detail {
