--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,5 +1,8 @@
 .containerCard{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 .containerCard_Item {
     display: flex;
