--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -1,5 +1,6 @@
 form {
     height: 100vh;
+    display: flex;
 }
 
 .FormContainer {
@@ -7,8 +8,14 @@ form {
     flex-direction: column;
     align-items: flex-end;
     padding-bottom: 20px;
+    margin-right: 50px;
 }
 
 .OrderNumber {
     height: 100vh;
+}
+
+.detalle{
+    display: flex;
+    flex-direction: column;
 }
